# MonkeyTyper

./: .gitignore  CMakeLists.txt  main.cpp  words.txt
saves/: BestScores.txt
src/: WordEntity.cpp  WordEntity.hpp
src/Configuration/: ConfigClick.cpp  ConfigClick.hpp  ConfigOption.cpp  ConfigOption.hpp
src/Game/: Game.cpp  Game.hpp
src/Game/BestScoresMenu/: BestScoresMenu.cpp  BestScoresMenu.hpp
src/Game/ConfigMenu/: ConfigClick.cpp  ConfigClick.hpp  ConfigMenu.cpp  ConfigMenu.hpp  ConfigOption.cpp  ConfigOption.hpp
src/Game/GamePlay/: GamePlay.cpp  GamePlay.hpp  PauseMenu.cpp  PauseMenu.hpp  WordEntity.cpp  WordEntity.hpp
src/Game/GamePlay/GameOver/: GameOver.cpp  GameOver.hpp
src/Game/GamePlay/PauseMenu/: PauseMenu.cpp  PauseMenu.hpp
src/Game/MainMenu/: MainMenu.cpp  MainMenu.hpp
src/GamePlay/: GamePlay.cpp  GamePlay.hpp
src/GameStates/: GameState.hpp  IGameState.hpp
src/IOIteractions/: MouseIteraction.cpp  MouseIteraction.hpp
src/helpers/: CenterEntity.cpp  CenterEntity.hpp  PlaceChooseMenu.cpp  PlaceChooseMenu.hpp  Theme.cpp  Theme.hpp  ThemeChooser.cpp  ThemeChooser.hpp
